# memory-enhanced-llm-chat-app

./: .env.example  Dockerfile  LICENSE  README.md  download_model.py  pyproject.toml
docs/: blog_post.md  getting_started.md
src/client/: __main__.py  cli.py  user.py
src/server/: __main__.py  api.py  chat.py  environment.py  logger.py  memory.py  store.py
src/server/templates/: index.html
tests/: ip_users.json  seed.py  test_chat.py  test_store.py
