[project]
name = "memory-cli"
version = "0.1.0"
description = "Interactive CLI for memory / embeddings / storage"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "dashscope>=1.26.3",
    "fastapi>=0.138.2",
    "openai>=2.44.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "supabase>=2.31.0",
    "unicorn>=2.1.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
memory-cli = "client.__main__:main"
llm-server = "server.__main__:main"

[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/server", "src/client"]

